# RayCaster

./: .gitignore  CMakeLists.txt  README.md  defs.c  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  raycast.c  raycast.h  structs.h  timer.c  timer.h
src/: defs.c  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  raycast.c  raycast.h  structs.h  timer.c  timer.h  vector.h
